<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Elbrium</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <string name="title_activity_person">Person</string>
    <string name="title_activity_shop">Shop</string>
    <string name="title_activity_room1">ScrollingActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string-array name="background_s">
        <item>Светлый фон</item>
        <item>Темный фон</item>
    </string-array>
    <string name="string_health">Здоровье</string>
    <string name="int_start_health">10.0</string>
    <string name="string_damage">Урон</string>
    <string name="int_start_damage">3.0</string>
    <string name="string_protection">Защита</string>
    <string name="string_speed">Скорость</string>
    <string name="string_maneuverability">Манёвренность</string>
    <string name="string_attack">Атака</string>
    <string name="int_start_protection">30.0</string>
    <string name="drop">Сбрасывает все значения, полностью возвращая деньги. Экспрементируйте!</string>
    <string name="drop_mini">Сбросить всё</string>
    <string name="plus_one">+1</string>
    <string name="space"> </string>
    <string name="registration">Регистрация</string>
    <string name="email">Почта</string>
    <string name="password">Пароль</string>
    <string name="start_nickname">Введите имя, которое будет отражено в игре</string>
    <string name="entrance">Вход</string>
    <string name="room_one">R1</string>
    <string name="go_to_space">В путь!</string>
    <string name="send">Send</string>
    <string name="enter_your_nickname">Введите свой никнейм</string>
    <string name="confirm">Подтведить</string>
    <string name="level">Уровень</string>
    <string name="int_start_level">0</string>
    <string name="int_start_ore">0.0</string>
    <string name="money">Монеты</string>
    <string name="exit">Выход</string>
    <string name="plus_two">+2</string>
    <string name="ore">Руда</string>
    <string name="sale_ore">Продать Elbrium</string>
    <string name="maximum">550</string>
    <string name="backslash">/</string>
    <string name="person_menu">Пользователь</string>
    <string name="shop_menu">Магазин</string>
    <string name="about_us_menu">О нас</string>
    <string name="econom">Экономия ресурсов</string>
    <string name="izm">Смена никнейма</string>
    <string name="settings">Настройки</string>
    <string name="econom_text">Оптимизация для слабых устройств</string>
    <string name="appearance">Внешний вид                     </string>
    <string name="sound">Музыка</string>
    <string name="error">Если вы это видите, что-то пошло не так</string>
    <string name="table_leader">Таблица лидеров</string>
    <string name="table_leader_string">Таблица лидеров по добыче Elbrium</string>
    <string name="base">База</string>
    <string name="whataboutlevel">Желаете купить базу? Оплатите 150 монет</string>
    <string name="newbase">Купить!</string>
    <string name="infobase">Введите имя своей базы</string>
    <string name="one">1</string>
    <string name="villagers">Рабочая сила</string>
    <string name="happiness">Счастье</string>
    <string name="int_happiness">25</string>
    <string name="TownHall">Ратуша</string>
    <string name="WorkShop">Мастерская</string>
    <string name="Kitchen">Столовая</string>
    <string name="House">Жилой дом</string>
    <string name="School">Школа</string>
    <string name="Factory">Фабрика</string>
    <string name="Tower">Вышка</string>
    <string name="Park">Парк</string>
    <string name="Mill">Завод</string>
    <string name="zero">0</string>
    <string name="three">3</string>
    <string name="accept">Применить</string>
    <string name="missions">Миссии</string>
    <string name="next">Продолжить</string>
    <string name="map">Карта</string>
</resources>
