<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/AUB"
    tools:context=".UserBase">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/whataboutlevel"
                android:id="@+id/whataboutlevel"
                android:visibility="visible"
                android:layout_gravity="left|center"/>

            <Button
                android:id="@+id/newbase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/newbase"
                android:visibility="visible" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/infobase"
                android:layout_width="285dp"
                android:layout_height="wrap_content"
                android:hint="@string/infobase" />

            <Button
                android:id="@+id/infobasebutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/confirm" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="320dp"
                android:textSize="17dp"
                android:textStyle="bold"
                android:id="@+id/infohealth"
                android:layout_height="wrap_content"
                android:text="@string/string_health"/>
            <TextView
                android:layout_width="wrap_content"
                android:textSize="17dp"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:id="@+id/realhealth"
                android:text="@string/one"/>
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="320dp"
                android:textSize="17dp"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:id="@+id/villagers"
                android:text="@string/villagers"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17dp"
                android:textStyle="bold"
                android:id="@+id/int_villagers"
                android:text="@string/three"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:textSize="17dp"
                android:textStyle="bold"
                android:id="@+id/happiness"
                android:text="@string/happiness"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17dp"
                android:textStyle="bold"
                android:id="@+id/int_happiness"
                android:text="@string/int_happiness"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:textSize="17dp"
                android:textStyle="bold"
                android:id="@+id/TownHall"
                android:text="@string/TownHall"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17dp"
                android:textStyle="bold"
                android:id="@+id/int_TownHall"
                android:text="@string/zero"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:text="@string/WorkShop"
                android:textSize="17dp"
                android:textStyle="bold"
                android:id="@+id/WorkShop"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero"
                android:textSize="17dp"
                android:textStyle="bold"
                android:id="@+id/int_WorkShop"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:id="@+id/Kitchen"
                android:textSize="17dp"
                android:textStyle="bold"
                android:text="@string/Kitchen"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/int_Kitchen"
                android:textSize="17dp"
                android:textStyle="bold"
                android:text="@string/zero"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:id="@+id/House"
                android:textSize="17dp"
                android:textStyle="bold"
                android:text="@string/House"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/int_House"
                android:textSize="17dp"
                android:textStyle="bold"
                android:text="@string/zero"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:id="@+id/School"
                android:textSize="17dp"
                android:textStyle="bold"
                android:text="@string/School"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/int_School"
                android:textSize="17dp"
                android:textStyle="bold"
                android:text="@string/zero"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:id="@+id/Factory"
                android:textSize="17dp"
                android:textStyle="bold"
                android:text="@string/Factory"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/int_Factory"
                android:textSize="17dp"
                android:textStyle="bold"
                android:text="@string/zero"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:id="@+id/Tower"
                android:textSize="17dp"
                android:textStyle="bold"
                android:text="@string/Tower"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17dp"
                android:textStyle="bold"
                android:id="@+id/int_Tower"
                android:text="@string/zero"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:textSize="17dp"
                android:textStyle="bold"
                android:id="@+id/Park"
                android:text="@string/Park"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17dp"
                android:textStyle="bold"
                android:id="@+id/int_Park"
                android:text="@string/zero"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:textSize="17dp"
                android:textStyle="bold"
                android:id="@+id/Mill"
                android:text="@string/Mill"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17dp"
                android:textStyle="bold"
                android:id="@+id/int_Mill"
                android:text="@string/zero"/>
        </LinearLayout>
    </LinearLayout>

</androidx.core.widget.NestedScrollView>