<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:id="@+id/ToStart"
    tools:context=".ScrollingActivity"
    android:background="@mipmap/scrolling">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/ic_three"
            android:layout_gravity="right"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/app_bar_height"
            android:fitsSystemWindows="true"
            android:alpha="0.0"
            android:theme="@style/Theme.MyApplication.AppBarOverlay">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/toolbar_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true"
                app:contentScrim="?attr/colorPrimary"
                app:layout_scrollFlags="noScroll|exitUntilCollapsed"
                app:toolbarId="@+id/toolbar">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="69dp"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/Theme.MyApplication.PopupOverlay" />

            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>
    </FrameLayout>

    <include layout="@layout/content_scrolling" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/infolevel"
                android:layout_width="144dp"
                android:layout_height="match_parent"
                android:text="@string/level"
                android:textColor="@color/level"
                android:textSize="25dp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/int_start_level"
                android:textSize="25dp"
                android:textStyle="bold"
                android:textColor="@color/level"
                android:shadowColor="@color/text_shadow"
                android:shadowDx="2"
                android:shadowDy="2"
                android:shadowRadius="4"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/infomoney"
                android:layout_width="144dp"
                android:layout_height="wrap_content"
                android:text="@string/money"
                android:textColor="@color/money"
                android:textSize="25dp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/money"
                android:textSize="25dp"
                android:textStyle="bold"
                android:textColor="@color/money"
                android:text="@string/int_start_level"
                android:shadowColor="@color/text_shadow"
                android:shadowDx="2"
                android:shadowDy="2"
                android:shadowRadius="4"/>
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/nick"
        android:layout_marginTop="70dp"
        android:textColor="@color/white"
        android:textSize="50dp"/>

</RelativeLayout>